--- a/main.html
+++ b/main.html
@@ -9,19 +9,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>welcome to acciojob</h1>
-	<nav>
+	<h1 role="heading">welcome to acciojob</h1>
+	<nav role="navigation">
 		<a href="#">home</a>
 		<a href="#">nome</a>
 		<a href="#">mome</a>
 	</nav>
-	<img src="https://images.fineartamerica.com/images/artworkimages/medium/3/empire-state-blue-night-inge-johnsson.jpg" alt="image"/>
+	<img role="img" src="https://images.fineartamerica.com/images/artworkimages/medium/3/empire-state-blue-night-inge-johnsson.jpg" alt="image"/>
 	<p>A paragraph is a series of sentences that are organized and coherent, and are all related to a single topic. Almost every piece of writing you do that is longer than a few sentences should be organized into paragraphs. This is because paragraphs show a reader where the subdivisions of an essay begin and end, and thus help the reader see the organization of the essay and grasp its main points.</p>
-	<ol>
-		<li>ramu</li>
-		<li>bhanu</li>
-		<li>chandra</li>
-	</ol>
+	<ul role="list">
+		<li role="listitem">ramu</li>
+		<li role="listitem">bhanu</li>
+		<li role="listitem">chandra</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
